# HerdNet

./: .gitignore  README.md  TRAIN.md  main.py  pyproject.toml
animaloc/datasets/: csv.py
animaloc/eval/: evaluators.py  lmds.py  metrics.py  stitchers.py
animaloc/models/: __init__.py  dinov3_backbone.py  dla.py  herdnet_convnext.py  pretrained_utils.py  vit_backbone.py  vit_herdnet.py
animaloc/train/: trainers.py
configs/test/: dla34.yaml  faster_rcnn.yaml  herdnet.yaml  herdnet_dinov3_vitb16.yaml  herdnet_dinov3_vits16.yaml
configs/train/: dla34.yaml  faster_rcnn.yaml  herdnet.yaml  herdnet_convnext.yaml  herdnet_dinov3_vitb16.yaml  herdnet_dinov3_vits16.yaml  vit_herdnet.yaml
notebooks/: demo-training-testing-herdnet.ipynb  evaluate.ipynb  predict.ipynb  raw-data-exploration.ipynb  training-with-custom-config.ipynb  weights-calculation.ipynb
tools/: bbox_to_points.py  train.py
