[project]
name = "herdnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.4",
]

[dependency-groups]
dev = [
    "notebook>=7.4.5",
    "seaborn>=0.13.2",
]
